[package]
name = "tsunagi_sdk"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
json = "0.12.4"
url = "2.3.1"
reqwest = { version = "0.11", features = ["blocking"] }
tokio = { version = "1", features = ["full"] }
convert_case = "0.6.0"
rustc-serialize = "0.3.24"
hex = "0.4.3"
sha3 = "0.10.6"