[package]
authors = ["XEMBook <xembook81@gmail.com>", "Yoshizawa Shogo <shogo.yoshizawa.2000@gmail.com>"]
description = "This is a bridge until a de facto standard SDK is available."

name = "tsunagi_functions"
version = "0.1.0.1"
edition = "2021"
license = "MIT"
readme = "README.md"
keywords = ["Symbol"]

repository = "https://github.com/xembook/tsunagi-functions"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
json = "0.12.4"
url = "2.3.1"
reqwest = { version = "0.11", features = ["blocking"] }
rustc-serialize = "0.3.24"
hex = "0.4.3"
sha3 = "0.10.6"
ed25519-dalek = "1"
base32 = "0.4.0"